modify <hr /> tag for older browser compatibility.

--- a/resume.html
+++ b/resume.html
@@ -16,12 +16,12 @@
 
     <main>
         <section id="professional-summary">
-            <h4> <hr>PROFESSIONAL SUMMARY <hr> </h4>
+            <h4> <hr />PROFESSIONAL SUMMARY <hr /> </h4>
             <p>Quality Assurance and Software Engineer with over 4 years of experience in software development, testing, and quality management. Adept at leading teams, improving product quality, and enhancing user experience through effective collaboration and problem-solving. Skilled in various programming languages and frameworks, with a strong focus on delivering high-quality software solutions.</p>
         </section>
 
         <section id="core-competencies">
-            <h4> <hr>CORE COMPETENCIES <hr> </h4>
+            <h4> <hr />CORE COMPETENCIES <hr /> </h4>
 
             <div class="row">
                 <div class="column">
@@ -39,7 +39,7 @@
         </section>
 
         <section id="work-experience">
-            <h4> <hr>WORK EXPERIENCE <hr> </h4>
+            <h4> <hr />WORK EXPERIENCE <hr /> </h4>
             <p><strong>Quality Assurance Engineer, TILKA TECHNOLOGIES (Jun 2024- Aug 2024)</strong></p>
             <ul>
                 <li>Performed exploratory tests on software systems to discover breaking points</li>
@@ -94,7 +94,7 @@
         </section>
 
         <section id="education">
-            <h4> <hr>EDUCATION <hr> </h4>
+            <h4> <hr />EDUCATION <hr /> </h4>
             <p><strong>University of Lagos —  B.Sc Systems Engineering  (Feb 2020)</strong>  </p>
             <ul>
                 <li><strong>Major:</strong> Systems Engineering with a Second Class Upper</li>
@@ -104,7 +104,7 @@
         </section>
 
         <section id="community=activities-and-awards">
-            <h4> <hr>COMMUNITY ACTIVITIES AND AWARDS <hr> </h4>
+            <h4> <hr />COMMUNITY ACTIVITIES AND AWARDS <hr /> </h4>
             <p><strong>Rave’d Up Student Hackathon — UNILAG Edition (Feb 2020)</strong></p>
             <ul>
                 <li>Awarded for my stellar performance in the Rave’d Up Students Hackathon organized by Flutterwave Inc. with my team as 1st runner-up.</li>
@@ -117,7 +117,7 @@
         </section>
 
         <section id="software-proficiencies">
-            <h4> <hr>SOFTWARE PROFICIENCIES <hr> </h4>
+            <h4> <hr />SOFTWARE PROFICIENCIES <hr /> </h4>
             <ul>
                 <li><strong>Programming & OOP:</strong>  Python, C#, PHP, JavaScript    </li>
                 <li><strong>Framework:</strong> Django, Flask, Laravel, WordPress, Pandas</li>
